# sfb_reader

./: CMakeLists.txt  Gui.h  README.md  a.out  build.bat  build_nogui.bat  helper.h  sfb.c  sfb.h  wingui.h
include/: sfb.h
source/: main.cpp  sfb.cpp  sfb.h  sfbgui.cpp  sfbgui.h
src/app/: app.cpp  config.h  gui.cpp  gui.h
src/sfb/: sfb.cpp  sfb.h
